fixed gapping and functions

--- a/chromium/pages/common.css
+++ b/chromium/pages/common.css
@@ -108,7 +108,7 @@ button.checked {
 .options {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 5px;
+    grid-column-gap: 10px;
 }
 
 .options > *, .menu:nth-child(n+2) {
